WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
307877
Fix find in page for content with -webkit-user-select: none
https://bugs.webkit.org/show_bug.cgi?id=307877
Summary
Fix find in page for content with -webkit-user-select: none
ccarley2
Reported
2026-02-13 17:59:45 PST
Users are unable to navigate through find in page matches if the match has -webkit-user-select: none.
Attachments
Add attachment
proposed patch, testcase, etc.
ccarley2
Comment 1
2026-02-13 17:59:46 PST
<
rdar://problem/85000322
>
ccarley2
Comment 2
2026-02-13 18:06:43 PST
Pull request:
https://github.com/WebKit/WebKit/pull/58696
EWS
Comment 3
2026-03-02 20:07:59 PST
Committed
308508@main
(635808d7603e): <
https://commits.webkit.org/308508@main
> Reviewed commits have been landed. Closing PR #58696 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug